Fixed modal scroll. Removed menu-bar-top z-index.

--- a/src/styl/menu-bar/menu-bar.styl
+++ b/src/styl/menu-bar/menu-bar.styl
@@ -81,7 +81,6 @@
         top: 0;
         right: 0;
         left: 0;
-        z-index: 11;
     }
 }
 
