--- a/src/styl/modal/modal.styl
+++ b/src/styl/modal/modal.styl
@@ -7,7 +7,7 @@ $modal-transition-duration = $modal-fade-duration + $modal-slide-duration;
 
 .modal {
     display: block;
-    position: fixed;
+    //position: fixed;
     z-index: $modal-z-index;
     top: 0;
     right: 0;
